// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`float renders 0 1`] = `
Array [
  .c0 {
  float: 0;
}

<div
    className="c0"
  />,
  .c0 {
  float: 0;
}

<div
    className="c0"
  />,
  .c0 {
  float: 0;
}

<div
    className="c0"
  />,
  .c0 {
  float: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`float renders function 1`] = `
Array [
  .c0 {
  float: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  float: has;
}

<div
    className="c0"
  />,
  .c0 {
  float: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  float: has;
}

<div
    className="c0"
  />,
]
`;

exports[`float renders invalid theme path 1`] = `
Array [
  .c0 {
  float: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  float: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  float: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  float: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`float renders negative number 1`] = `
Array [
  .c0 {
  float: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  float: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  float: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  float: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`float renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    float: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    float: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    float: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    float: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    float: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    float: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    float: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    float: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`float renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    float: July;
  }
}

@media April {
  .c0 {
    float: August;
  }
}

@media January {
  .c0 {
    float: September;
  }
}

@media April {
  .c0 {
    float: November;
  }
}

@media June {
  .c0 {
    float: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    float: July;
  }
}

@media April {
  .c0 {
    float: August;
  }
}

@media January {
  .c0 {
    float: September;
  }
}

@media April {
  .c0 {
    float: November;
  }
}

@media June {
  .c0 {
    float: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    float: January;
  }
}

@media April {
  .c0 {
    float: December;
  }
}

@media January {
  .c0 {
    float: April;
  }
}

@media April {
  .c0 {
    float: May;
  }
}

@media June {
  .c0 {
    float: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    float: January;
  }
}

@media April {
  .c0 {
    float: December;
  }
}

@media January {
  .c0 {
    float: April;
  }
}

@media April {
  .c0 {
    float: May;
  }
}

@media June {
  .c0 {
    float: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`float renders postitive number 1`] = `
Array [
  .c0 {
  float: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  float: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  float: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  float: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`float renders string 1`] = `
Array [
  .c0 {
  float: July;
}

<div
    className="c0"
  />,
  .c0 {
  float: July;
}

<div
    className="c0"
  />,
  .c0 {
  float: June;
}

<div
    className="c0"
  />,
  .c0 {
  float: June;
}

<div
    className="c0"
  />,
]
`;

exports[`float renders valid theme path 1`] = `
Array [
  .c0 {
  float: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  float: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  float: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  float: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
